--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "my-react-cookbook",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "http-proxy-middleware": "^1.0.4",
     "material-ui-icons": "^1.0.0-beta.36",
+    "nodemailer": "^6.4.10",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
